# senscritique2letterboxd

./: README.md  default.nix  flake.nix  main.py  pyproject.toml  requirements.txt  shell.nix
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yml  publish_poetry.yml  publish_uv.yml
npins/: sources.json
s2l/: main.py  utils.py
tests/: test_main.py
