[tool.poetry]
name = "senscritique2letterboxd"
version = "0.1.0"
description = "Export your SensCritique data to Letterboxd"
authors = ["rx342 <https://github.com/rx342>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.5"
requests = "^2.29.0"
beautifulsoup4 = "^4.12.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
