[tool.poetry]
name = "s2l"
version = "0.1.0"
description = "Export your SensCritique data to Letterboxd"
authors = ["rx342"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.5"
requests = "^2.29.0"
beautifulsoup4 = "^4.12.2"
black = "^24.8.0"
pytest = "^8.3.2"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
s2l = "s2l.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
